# hello-rs-64

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
src/: main.rs
targets/: linker.ld  mips-ultra64-cpu.json
